--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -22,9 +22,7 @@
     "color": "color.png"
   },
   "accentColor": "#F3F4F6",
-  "configurableTabs": [
-    
-  ],
+  "configurableTabs": [],
   "staticTabs": [
     {
       "contentUrl": "https://<<BASE_URI_DOMAIN>>/tab/simple",
@@ -34,22 +32,6 @@
         "personal"
       ]
     },
-    {
-      "contentUrl": "https://<<BASE_URI_DOMAIN>>/tab/silent?loginHint={loginHint}&userObjectId={userObjectId}&tenantId={tid}",
-      "entityId": "silentAuth",
-      "name": "Silent Auth",
-      "scopes": [
-        "personal"
-      ]
-    }
-  ],
-  "bots": [
-    {
-      "botId": "<<REGISTERED_BOT_ID>>",
-      "scopes": [
-        "personal"
-      ]
-    }
   ],
   "permissions": [
     "messageTeamMembers",
